2012-05-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/hc08/gen.c:
	  Improved code for PCALL.

2012-05-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/hc08/gen.c,
	  src/hc08/ralloc2.cc:
	  Improved code for GET_VALUE_AT_ADDRESS.

2012-05-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/hc08/gen.c:
	  Improve addition for hc08 and s08.
	* src/z80/main.c:
	  Fix name of r3ka library.
	* src/hc08/main.c:
	  Fix name of s08 library.

2012-05-19 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/hc08.src/hc08.cc:
	  Fix sthx with ext operand on s08.
	* src/hc08/gen.c:
	  Use ldhx, cphx and sthx with ext operands for s08 in places where we use them for hc08 with imm operands.

2012-05-19 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/as6808/m08mch.c,
	  sdas/as6808/m6808.h,
	  sdas/as6808/m08pst.c,
	  src/SDCCralloc.hpp,
	  src/SDCCglue.c,
	  src/hc08/main.c,
	  src/hc08/ralloc2.cc:
	  Asm for s08.

2012-05-19 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug3223041.c:
	  Do not handle hc08 as special case.

2012-05-18 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/r3ka/Makefile.in:
	  Fix building of r3ka lib.
	* device/lib/s08/Makefile.in:
	  Fix building of s08 lib.
	* support/regression/Makefile.in,
	  support/regression/ports/s08,
	  support/regression/fwk/include/testfwk.h,
	  support/regression/tests/gcc-torture-execute-func-ptr-1.c,
	  support/regression/tests/gcc-torture-execute-991112-1.c,
	  support/regression/tests/gcc-torture-execute-921208-1.c,
	  support/regression/tests/bug3379723.c,
	  support/regression/tests/gcc-torture-execute-930702-1.c,
	  support/regression/tests/float_single.c,
	  support/regression/tests/gcc-torture-execute-20000412-2.c,
	  support/regression/tests/gcc-torture-execute-20080529-1.c,
	  support/regression/tests/gcc-torture-execute-20030209-1.c,
	  support/regression/tests/gcc-torture-execute-950915-1.c,
	  support/regression/tests/bug1723128.c,